docs: adding new files and changing api info

--- a/back-end/package.json
+++ b/back-end/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "start": "node ./api/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -15,6 +16,8 @@
     "cors": "^2.8.5",
     "express": "^4.21.2",
     "mongo": "^0.1.0",
-    "mongodb": "^6.16.0"
+    "mongodb": "^6.16.0",
+    "path": "^0.12.7",
+    "projeto-spotify": "file:.."
   }
 }
