--- a/package.json
+++ b/package.json
@@ -3,5 +3,27 @@
     "axios": "^1.9.0",
     "express": "^5.1.0",
     "mongodb": "^6.13.0"
-  }
+  },
+  "name": "projeto-spotify",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "devDependencies": {},
+  "scripts": {
+    "build": "npm install --prefix back-end && npm install && npm run build --prefix front-end ",
+        "start": "npm run start --prefix back-end"
+
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Luakenai/spotify-projeto.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "type": "commonjs",
+  "bugs": {
+    "url": "https://github.com/Luakenai/spotify-projeto/issues"
+  },
+  "homepage": "https://github.com/Luakenai/spotify-projeto#readme"
 }
