--- a/back-end/package.json
+++ b/back-end/package.json
@@ -18,6 +18,7 @@
     "mongo": "^0.1.0",
     "mongodb": "^6.16.0",
     "path": "^0.12.7",
-    "projeto-spotify": "file:.."
+    "projeto-spotify": "file:..",
+    "vite": "^6.3.5"
   }
 }
