--- a/package.json
+++ b/package.json
@@ -2,17 +2,16 @@
   "dependencies": {
     "axios": "^1.9.0",
     "express": "^5.1.0",
-    "mongodb": "^6.13.0"
+    "mongodb": "^6.13.0",
+    "vite": "^6.3.5"
   },
   "name": "projeto-spotify",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "devDependencies": {},
   "scripts": {
     "build": "npm install --prefix back-end && npm install && npm run build --prefix front-end ",
-        "start": "npm run start --prefix back-end"
-
+    "start": "npm run start --prefix back-end"
   },
   "repository": {
     "type": "git",
