--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "dependencies": {
     "axios": "^1.9.0",
     "express": "^5.1.0",
-    "mongodb": "^6.13.0"
+    "mongodb": "^6.13.0",
+     "vite": "^6.3.5"
+    
   },
   "name": "projeto-spotify",
   "version": "1.0.0",
